--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -2,6 +2,12 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -9,6 +15,12 @@
     <width>1920</width>
     <height>1080</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
@@ -28,12 +40,15 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
+  <property name="animated">
+   <bool>true</bool>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButtonMondayChange">
     <property name="geometry">
      <rect>
       <x>345</x>
-      <y>290</y>
+      <y>280</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -58,7 +73,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>820</x>
-      <y>290</y>
+      <y>280</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -83,7 +98,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>584</x>
-      <y>610</y>
+      <y>600</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -108,7 +123,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>1059</x>
-      <y>610</y>
+      <y>600</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -133,7 +148,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>1534</x>
-      <y>610</y>
+      <y>600</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -158,7 +173,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>1295</x>
-      <y>290</y>
+      <y>280</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -183,7 +198,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>290</y>
+      <y>280</y>
       <width>130</width>
       <height>40</height>
      </rect>
@@ -208,7 +223,7 @@ background-color: rgb(170, 0, 255, 100);</string>
     <property name="geometry">
      <rect>
       <x>970</x>
-      <y>40</y>
+      <y>30</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -237,7 +252,7 @@ background-color: rgb(255, 255, 0, 50);</string>
     <property name="geometry">
      <rect>
       <x>1445</x>
-      <y>40</y>
+      <y>30</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -266,7 +281,7 @@ background-color: rgb(255, 255, 0, 50);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>40</y>
+      <y>30</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -295,7 +310,7 @@ background-color: rgb(255, 255, 0, 50);</string>
     <property name="geometry">
      <rect>
       <x>495</x>
-      <y>40</y>
+      <y>30</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -324,7 +339,7 @@ background-color: rgb(255, 255, 0, 50);</string>
     <property name="geometry">
      <rect>
       <x>259</x>
-      <y>360</y>
+      <y>350</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -353,7 +368,7 @@ background-color: rgb(255, 255, 0, 50);</string>
     <property name="geometry">
      <rect>
       <x>734</x>
-      <y>360</y>
+      <y>350</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -382,7 +397,7 @@ background-color: rgb(255, 255, 0, 50);</string>
     <property name="geometry">
      <rect>
       <x>1209</x>
-      <y>360</y>
+      <y>350</y>
       <width>455</width>
       <height>240</height>
      </rect>
@@ -429,17 +444,16 @@ background-color: rgb(255, 255, 0, 50);</string>
 color: rgb(255, 255, 0);</string>
     </property>
     <property name="text">
-     <string>Check knowledge of words
-from this week</string>
+     <string>Training Mode: Cards</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelPrompt">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>810</y>
+      <x>20</x>
+      <y>830</y>
       <width>675</width>
-      <height>230</height>
+      <height>160</height>
      </rect>
     </property>
     <property name="font">
@@ -449,7 +463,7 @@ from this week</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>On the cards should write word combinations. You can't write more than six lines on them.
@@ -486,7 +500,7 @@ Also &quot;'s&quot;, &quot;'cause&quot;.</string>
 color: rgb(255, 255, 0);</string>
     </property>
     <property name="text">
-     <string>Training Mode</string>
+     <string>Training Mode: All</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButtonWords">
@@ -543,7 +557,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>280</y>
+      <y>270</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -558,7 +572,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Monday</string>
@@ -568,7 +582,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>495</x>
-      <y>280</y>
+      <y>270</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -583,7 +597,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Tuesday</string>
@@ -593,7 +607,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>970</x>
-      <y>280</y>
+      <y>270</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -608,7 +622,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Wednesday</string>
@@ -618,7 +632,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>1445</x>
-      <y>280</y>
+      <y>270</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -633,7 +647,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Thursday</string>
@@ -643,7 +657,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>259</x>
-      <y>600</y>
+      <y>590</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -658,7 +672,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Friday</string>
@@ -668,7 +682,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>734</x>
-      <y>600</y>
+      <y>590</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -683,7 +697,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Saturday</string>
@@ -693,7 +707,7 @@ color: rgb(255, 255, 0);</string>
     <property name="geometry">
      <rect>
       <x>1209</x>
-      <y>600</y>
+      <y>590</y>
       <width>100</width>
       <height>30</height>
      </rect>
@@ -708,7 +722,7 @@ color: rgb(255, 255, 0);</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 0);</string>
+     <string notr="true">color: rgb(255, 0, 0);</string>
     </property>
     <property name="text">
      <string>Sunday</string>
@@ -767,14 +781,28 @@ color: rgb(255, 255, 0);</string>
 the Cards</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QPushButton" name="pushButtonInfo">
     <property name="geometry">
      <rect>
-      <x>1090</x>
-      <y>720</y>
-      <width>281</width>
-      <height>151</height>
+      <x>20</x>
+      <y>950</y>
+      <width>40</width>
+      <height>40</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Comic Sans MS</family>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
+      <underline>false</underline>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(255, 0, 0, 100);
+color: rgb(255, 255, 0);</string>
     </property>
     <property name="text">
      <string/>
