--- a/trainingmode.ui
+++ b/trainingmode.ui
@@ -32,7 +32,7 @@
    <property name="geometry">
     <rect>
      <x>95</x>
-     <y>180</y>
+     <y>160</y>
      <width>375</width>
      <height>120</height>
     </rect>
@@ -47,8 +47,7 @@
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 51, 0);
-background-color: rgb(0, 210, 255, 180);
-</string>
+background-color: rgba(0, 0, 127, 150);</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::Box</enum>
@@ -63,7 +62,7 @@ background-color: rgb(0, 210, 255, 180);
     <number>0</number>
    </property>
    <property name="text">
-    <string/>
+    <string>press it --&gt;</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -73,7 +72,7 @@ background-color: rgb(0, 210, 255, 180);
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>180</y>
+     <y>160</y>
      <width>375</width>
      <height>120</height>
     </rect>
@@ -85,8 +84,8 @@ background-color: rgb(0, 210, 255, 180);
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(0, 210, 255);
-background-color: rgb(255, 51, 0, 180);</string>
+    <string notr="true">background-color: rgb(0, 0, 127, 150);
+color: rgba(0, 210, 255);</string>
    </property>
    <property name="text">
     <string/>
@@ -105,7 +104,7 @@ background-color: rgb(255, 51, 0, 180);</string>
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>310</y>
+     <y>290</y>
      <width>135</width>
      <height>50</height>
     </rect>
@@ -119,8 +118,8 @@ background-color: rgb(255, 51, 0, 180);</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(85, 255, 0)}
-QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
+    <string notr="true">QPushButton{background-color: rgba(0, 0, 127, 100); color: rgb(85, 255, 0)}
+QPushButton::hover{background-color: rgba(0, 0, 127, 150)}</string>
    </property>
    <property name="text">
     <string>Check</string>
@@ -136,7 +135,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    <property name="geometry">
     <rect>
      <x>750</x>
-     <y>370</y>
+     <y>350</y>
      <width>115</width>
      <height>50</height>
     </rect>
@@ -153,8 +152,8 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(204, 204, 255)}
-QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
+    <string notr="true">QPushButton{background-color: rgba(0, 0, 127, 100); color: rgb(204, 204, 255)}
+QPushButton::hover{background-color: rgba(0, 0, 127, 150)}</string>
    </property>
    <property name="text">
     <string>Repeat</string>
@@ -167,7 +166,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    <property name="geometry">
     <rect>
      <x>635</x>
-     <y>310</y>
+     <y>290</y>
      <width>230</width>
      <height>50</height>
     </rect>
@@ -181,8 +180,8 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(204, 255, 153)}
-QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
+    <string notr="true">QPushButton{background-color: rgba(0, 0, 127, 100); color: rgb(0, 255, 204)}
+QPushButton::hover{background-color: rgba(0, 0, 127, 150)}</string>
    </property>
    <property name="text">
     <string>Show Translation</string>
@@ -192,7 +191,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>440</y>
+     <y>420</y>
      <width>180</width>
      <height>25</height>
     </rect>
@@ -218,7 +217,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>410</y>
+     <y>390</y>
      <width>180</width>
      <height>25</height>
     </rect>
@@ -247,7 +246,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>380</y>
+     <y>360</y>
      <width>180</width>
      <height>25</height>
     </rect>
@@ -281,7 +280,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
      <x>805</x>
      <y>20</y>
      <width>60</width>
-     <height>50</height>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
@@ -291,8 +290,9 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 0);
-background-color: rgba(255, 0, 0, 100);</string>
+    <string notr="true">QLabel{color: rgb(255, 255, 0);
+background-color: rgba(255, 0, 0, 100);}
+QToolTip{border: 0px; background-color: rgb(0, 85, 127); font: 11pt Comic Sans MS; color: rgb(255,255,0);qproperty-alignment: AlignCenter;}</string>
    </property>
    <property name="text">
     <string>0</string>
@@ -305,7 +305,7 @@ background-color: rgba(255, 0, 0, 100);</string>
    <property name="geometry">
     <rect>
      <x>750</x>
-     <y>430</y>
+     <y>410</y>
      <width>115</width>
      <height>50</height>
     </rect>
@@ -319,8 +319,8 @@ background-color: rgba(255, 0, 0, 100);</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(204, 204, 255)}
-QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
+    <string notr="true">QPushButton{background-color: rgba(0, 0, 127, 100); color: rgb(204, 204, 255)}
+QPushButton::hover{background-color: rgba(0, 0, 127, 150)}</string>
    </property>
    <property name="text">
     <string>Skip</string>
@@ -329,18 +329,18 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
   <widget class="QPushButton" name="pushButtonStartOver">
    <property name="geometry">
     <rect>
-     <x>805</x>
-     <y>80</y>
-     <width>135</width>
-     <height>50</height>
+     <x>820</x>
+     <y>70</y>
+     <width>120</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Comic Sans MS</family>
-     <pointsize>16</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <pointsize>14</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
    </property>
    <property name="styleSheet">
@@ -380,7 +380,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
      <x>585</x>
      <y>20</y>
      <width>220</width>
-     <height>50</height>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
@@ -390,8 +390,9 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 0);
-background-color: rgba(255, 0, 0, 100);</string>
+    <string notr="true">QLabel{color: rgb(255, 255, 0);
+background-color: rgba(255, 0, 0, 100);}
+QToolTip{border: 0px; background-color: rgb(0, 85, 127); font: 11pt Comic Sans MS; color: rgb(255,255,0);qproperty-alignment: AlignCenter;}</string>
    </property>
    <property name="text">
     <string>You've Translated: </string>
@@ -406,7 +407,7 @@ background-color: rgba(255, 0, 0, 100);</string>
      <x>865</x>
      <y>20</y>
      <width>75</width>
-     <height>50</height>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
@@ -416,8 +417,9 @@ background-color: rgba(255, 0, 0, 100);</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 0);
-background-color: rgba(255, 0, 0, 100);</string>
+    <string notr="true">QLabel{color: rgb(255, 255, 0);
+background-color: rgba(255, 0, 0, 100);}
+QToolTip{border: 0px; background-color: rgb(0, 85, 127); font: 11pt Comic Sans MS; color: rgb(255,255,0);qproperty-alignment: AlignCenter;}</string>
    </property>
    <property name="text">
     <string>/0</string>
@@ -426,32 +428,30 @@ background-color: rgba(255, 0, 0, 100);</string>
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="labelPrompt">
+  <widget class="QLabel" name="labelTime">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>480</width>
-     <height>85</height>
+     <width>120</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Comic Sans MS</family>
-     <pointsize>10</pointsize>
+     <pointsize>14</pointsize>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 0);</string>
+    <string notr="true">background-color: rgba(255, 0, 0, 100);
+color: rgb(255, 255, 0);</string>
    </property>
    <property name="text">
-    <string>If the number of words you've translated is bigger then you entered improper 
-translation sometimes, but if smaller then you skipped some words or selected 
-only-language point. If the number is equal to general amount of words then 
-you didn't have any mistakes and didn't use only-language point.</string>
+    <string>Time: 00:00</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
