--- a/wordsmode.ui
+++ b/wordsmode.ui
@@ -46,8 +46,8 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QListWidget{ background-color: rgb(102, 0, 204, 100); color: rgb(255, 51, 0) }
-QListWidget::item::selected{ background-color: rgb(0, 102, 204, 150); color: rgb(255, 51, 0) }
+    <string notr="true">QListWidget{ background-color: rgba(102, 0, 204, 100); color: rgb(255, 51, 0) }
+QListWidget::item::selected{ background-color: rgba(0, 102, 204, 150); color: rgb(255, 51, 0) }
 </string>
    </property>
   </widget>
@@ -158,7 +158,7 @@ background-color: rgba(255, 0, 0, 100);</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(255, 191, 0, 100); color: rgb(255, 255, 0)}
+    <string notr="true">QPushButton{background-color: rgba(255, 191, 0, 100); color: rgb(255, 255, 0)}
 QPushButton::hover{background-color: rgba(255, 191, 0, 150)}</string>
    </property>
    <property name="text">
@@ -243,7 +243,7 @@ background-color: rgba(255, 0, 0, 100);</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(255, 0, 0, 100); color: rgb(255, 102, 102)}
+    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(255, 102, 102)}
 QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    </property>
    <property name="text">
@@ -260,7 +260,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(255, 255, 255, 180); color: rgb(19, 121, 255)}
+    <string notr="true">QPushButton{background-color: rgba(255, 255, 255, 180); color: rgb(19, 121, 255)}
 QPushButton::hover{background-color: rgba(255, 255, 255, 230)}</string>
    </property>
    <property name="text">
@@ -283,7 +283,7 @@ QPushButton::hover{background-color: rgba(255, 255, 255, 230)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(255, 0, 0, 100); color: rgb(255, 255, 0)}
+    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(255, 255, 0)}
 QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    </property>
    <property name="text">
@@ -308,7 +308,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255, 180);
+    <string notr="true">background-color: rgba(255, 255, 255, 180);
 color: rgb(255, 51, 0)</string>
    </property>
    <property name="text">
@@ -340,7 +340,7 @@ color: rgb(255, 51, 0)</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(13, 213, 29, 100); color: rgb(153, 255, 51)}
+    <string notr="true">QPushButton{background-color: rgba(13, 213, 29, 100); color: rgb(153, 255, 51)}
 QPushButton::hover{background-color: rgba(13, 213, 29, 150)}</string>
    </property>
    <property name="text">
@@ -428,7 +428,7 @@ not only in English</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(19, 121, 255, 100); color: rgb(0, 255, 255)}
+    <string notr="true">QPushButton{background-color: rgba(19, 121, 255, 100); color: rgb(0, 255, 255)}
 QPushButton::hover{background-color: rgba(19, 121, 255, 150)}</string>
    </property>
    <property name="text">
@@ -451,7 +451,7 @@ QPushButton::hover{background-color: rgba(19, 121, 255, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(255, 0, 0, 100); color: rgb(255, 255, 0)}
+    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(255, 255, 0)}
 QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    </property>
    <property name="text">
@@ -474,7 +474,7 @@ QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton{background-color: rgb(255, 0, 0, 100); color: rgb(255, 255, 0)}
+    <string notr="true">QPushButton{background-color: rgba(255, 0, 0, 100); color: rgb(255, 255, 0)}
 QPushButton::hover{background-color: rgba(255, 0, 0, 150)}</string>
    </property>
    <property name="text">
